Updating demo application
Login page and "simple fields" page in one column, not full width.
Better demonstration data.
Repair bad font-awesome configuration.

--- a/tdlist/templates/united/tpl_header.html
+++ b/tdlist/templates/united/tpl_header.html
@@ -24,7 +24,7 @@
     
     
     <!-- Custom Fonts -->
-    <link href="%designrelpath%/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="%designrelpath%/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
     
     
 </head>
