--- a/tdlist/templates/united/tpl_listitem.html
+++ b/tdlist/templates/united/tpl_listitem.html
@@ -2,21 +2,59 @@
 	<div class="container">
       <hr>
       <div class="row">
-        <div class="col-md-3">
-          <h2>%itid%</h2>
-          <h4>Emergency: %it_emergency%</h4>
-          <h4>Title : %it_title%</h4>
-        </div>
-        <div class="col-md-5">          
-          <h4>Project : %it_projid%</h4>
-          <h4>Status : %it_statusid%</h4>
-          <h4>Assigned to : %it_assignedtoid%</h4>
-          <h4>Date changed : %it_datechanged%</h4>          
-          %btn_upditem% %btn_delitem%
+        <div class="col-md-4">
+            <div class="row">
+                <div class="col-md-5"><h2>Id : </h2></div>
+                <div class="col-md-7"><h2>%itid%</h2></div>
+            </div>                
+           <div class="row">             
+                <div class="col-md-5"><h4>Project :</h4></div>
+                <div class="col-md-7"><h4>%it_projid%</h4></div>
+           </div>
+           <div class="row">             
+                <div class="col-md-5"><h4>Status :</h4></div>
+                <div class="col-md-7"><h4>%it_statusid%</h4></div>
+           </div>
+            <div class="row">
+                <div class="col-md-5"><h4>Emergency : </h4></div>
+                <div class="col-md-7"><h4>%it_emergency%</h4></div>
+            </div>                
         </div>
         <div class="col-md-4">
-          <h4>Text : </h4>
-          <p> %it_text%</p>
+            <div class="row">
+                <div class="col-md-5"><h2>Title :</h2></div>
+                <div class="col-md-7"><h4><br>%it_title%</h4></div>
+            </div>                
+            <div class="row">
+                <div class="col-md-5"><h4>Assigned to : </h4></div>
+                <div class="col-md-7"><h4>%it_assignedtoid%</h4></div>
+            </div> 
+            <div class="row">
+                <div class="col-md-5"><h4>Date changed : </h4></div>
+                <div class="col-md-7"><h4>%it_datechanged%</h4></div>
+            </div> 
+            <div class="row">
+                <div class="col-md-5"><h4>&nbsp;</h4></div>
+                <div class="col-md-7"><h4>&nbsp;</h4></div>
+            </div> 
+        </div>                 
+        <div class="col-md-4">       
+            <div class="row">
+                <div class="col-md-12"><h2>Text :</h2>
+                                       <p>%it_text%</p></div>
+            </div>                
+            <div class="row">
+                <div class="col-md-5"><h4>&nbsp;</h4></div>
+                <div class="col-md-7"><h4>&nbsp;</h4></div>
+            </div> 
+            <div class="row">
+                <div class="col-md-5"><h4>&nbsp;</h4></div>
+                <div class="col-md-7"><h4>&nbsp;</h4></div>
+            </div> 
+            <div class="row">
+                <div class="col-md-5"><h4>%btn_upditem%</h4></div>
+                <div class="col-md-7"><h4>%btn_delitem%</h4></div>
+            </div> 
         </div>
         
     </div> 
